Regression: EXR 'JPG Preview' doesn't use color space anymore #101329

Closed
opened 2022-09-24 16:15:06 +02:00 by Neopixel Digital · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.3.0, caused by 5baa3ecda6
Worked: 3.2

Short description of error
In previous version, when I render an animation in .exr, Blender generates a preview in JPEG with the right color profile I choose (in this case, filmic).
image.png
image.png

This helps a lot, since I render in 4K Open Gate format (4448x3096), so I can make edits in Davinci Resolve without lags.
Now, Blender 3.3 gives a nasty previewin standard profile color, strong and bad contrast and blow the highlights.

It's like just ignoring the filmic profile and make this useless jpeg.QUARTO1_0001.jpg

Exact steps for others to reproduce the error

  • Open attached file (or any animation)
  • Render animation in exr with the ** "preview" option enabled**
    exr_jpg_preview_bug.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.3.0, caused by 5baa3ecda6 Worked: 3.2 **Short description of error** In previous version, when I **render an animation in .exr**, Blender generates a preview in JPEG with the right color profile I choose (in this case, filmic). ![image.png](https://archive.blender.org/developer/F13563297/image.png) ![image.png](https://archive.blender.org/developer/F13563294/image.png) This helps a lot, since I render in 4K Open Gate format (4448x3096), so I can make edits in Davinci Resolve without lags. Now, Blender 3.3 gives a nasty preview**in standard profile color, strong and bad contrast and blow the highlights**. It's like just ignoring the filmic profile and make this useless jpeg.![QUARTO1_0001.jpg](https://archive.blender.org/developer/F13563291/QUARTO1_0001.jpg) **Exact steps for others to reproduce the error** - Open attached file (or any animation) - Render animation in exr with the ** "preview" option enabled** [exr_jpg_preview_bug.blend](https://archive.blender.org/developer/F13577301/exr_jpg_preview_bug.blend)

Added subscriber: @Neopixel-Digital

Added subscriber: @Neopixel-Digital

Added subscribers: @brecht, @mano-wii

Added subscribers: @brecht, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm the problem.
git bisect pointed 5baa3ecda6 as the first bad commit
Reading the commit description, it doesn't look like this change was actually predicted.
So I'm confirming as regression.

Cc @brecht

Thanks for the report, I can confirm the problem. git bisect pointed 5baa3ecda6 as the first bad commit Reading the commit description, it doesn't look like this change was actually predicted. So I'm confirming as regression. Cc @brecht
Germano Cavalcante changed title from EXR preview option doesn't use Filmic profile anymore to Regression: EXR 'JPG Preview' doesn't use color space anymore 2022-09-27 00:51:42 +02:00

This issue was referenced by 90055a1f2c

This issue was referenced by 90055a1f2c194769a403e6525d371bf6db40fa8a

This issue was referenced by 21fdb0d92b

This issue was referenced by 21fdb0d92b6697cba252a1e8080b19012efa8383
Lukas Stockner self-assigned this 2022-10-22 18:17:28 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101329
No description provided.